fixed ui overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 	color: #777;
 	font-size: 90%;
   	ext-align: center;
-  	padding-top: 50px;
+  	padding-top: 60px;
   	width: 100%;
   	overflow-y: hidden;
 }
