--- a/src/containers/css/Home.css
+++ b/src/containers/css/Home.css
@@ -40,7 +40,7 @@
 
 @media (max-width: 700px) {
 	.banner-text {
-		font-size: 20px;
+		font-size: 4vw;
 		text-shadow: 0 0 5px white;
 	}
 	.banner-text h1, .banner-text h3 {
@@ -48,12 +48,18 @@
 	.frontpage-section {
 		padding: 20px 20px;
 	}
-.socialmedia-icons {
-	border: 2px solid #666;
-	border-radius: 2px;
-	display: block;
-	margin: 20px auto;
-	text-align: center;
-	max-width: 500px;
+	.socialmedia-icons {
+		border: 2px solid #666;
+		border-radius: 2px;
+		display: block;
+		margin: 20px auto;
+		text-align: center;
+		max-width: 500px;
+	}
 }
+
+@media (max-width: 500px) {
+	.banner-text {
+		margin-left: 10px;
+	}
 }
